Fixed mobile navigation being clickable when not visible.

--- a/src/app/components/navigation/navigation.module.scss
+++ b/src/app/components/navigation/navigation.module.scss
@@ -18,7 +18,10 @@
 
     @include mixins.desktop {
       opacity: 0;
-      pointer-events: none;
+
+      * {
+        pointer-events: none;
+      }
     }
   }
 }
